# fieldops

backend/: .gitignore  main.py  pyproject.toml
backend/configs/: config.py
backend/lib/: hash_lib.py  token_lib.py
backend/lib/database/: db.py
backend/models/: base_model.py  job_history_model.py  job_model.py  notification_model.py  user_model.py
backend/routers/: auth_router.py  user_router.py
backend/services/: user_service.py
backend/utils/: session.py
